test/valid/test22.sl
integer x; x := 5;
if not (x > 3) or (x < 10 and x % 2 = 1) then
    print("valid");