test/invalid/test7.sl
if 5 < 10 
    print("valid");